[gd_scene load_steps=8 format=3 uid="uid://bk7fa8he2gwxd"]

[ext_resource type="Script" uid="uid://4ajxq1svwdk8" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://fmrom06ajqh6" path="res://ball.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://6wjl5xx4a3f1" path="res://home_base.tscn" id="3_h2yge"]
[ext_resource type="Script" uid="uid://bamkmwnix3ieo" path="res://score_label.gd" id="4_1bvp3"]

[sub_resource type="BoxMesh" id="BoxMesh_7dm0k"]
size = Vector3(15, 1, 15)

[sub_resource type="BoxShape3D" id="BoxShape3D_ig7tw"]
size = Vector3(15, 1, 15)

[sub_resource type="Curve3D" id="Curve3D_ig7tw"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -5.00637, 0, -4.99111, 0, 0, 0, 0, 0, 0, 4.98062, 0, -5.0364, 0, 0, 0, 0, 0, 0, 4.91268, 0, 5.14586, 0, 0, 0, 0, 0, 0, -5.17454, 0, 5.1461),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[node name="Main" type="Node3D"]
script = ExtResource("1_0xm2m")
object_scene = ExtResource("1_ig7tw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.697165, 0.716911, 0, -0.716911, -0.697165, 0, 5.71829, 0)

[node name="Ground" type="StaticBody3D" parent="." groups=["world"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
input_ray_pickable = false

[node name="GroundPlane" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_7dm0k")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_ig7tw")

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.950868, 0.309598, 0, -0.309598, 0.950868, 0, 3.50491, 6.72023)

[node name="Camera3D" type="Camera3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 0.980891, 0.19456, 0, -0.19456, 0.980891, 0, 1.33416, 0.434399)

[node name="MobTimer" type="Timer" parent="."]
autostart = true

[node name="SpawnPath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
curve = SubResource("Curve3D_ig7tw")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(0.00453475, 0, -0.999956, 0, 1, 0, 0.999956, 0, 0.00453475, -5.00637, 0, -4.99111)

[node name="HomeBase" parent="." instance=ExtResource("3_h2yge")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 17.0
offset_top = 15.0
offset_right = 78.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
script = ExtResource("4_1bvp3")

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="hit" from="HomeBase" to="." method="_on_home_base_hit"]
